Bug 17067 – [linux][mgtlibrary] 'Organization Complete' window is cut off. r=mook
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@14802 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/app/skin/dialogs/jobProgress.css
+++ b/app/skin/dialogs/jobProgress.css
@@ -49,3 +49,15 @@ See SBJobUtils.jsm and sbIJobProgress.idl.
 #jobprogress_error_list {
   margin: 0;
 }
+
+/* This rule modifies the behavior of the attribute "hidden" so that instead of
+making things display: none; it makes them visibility: hidden;. display: none;
+makes elements not effect layout and not get drawn, while visibility: hidden;
+makes them not get drawn but still affect layout. The upshot is that the
+contents of the closable box will still have a height even when the box is
+"closed", so the dialog will always be the correct size. */
+#jobprogress_error_box .closable-box-content[hidden]
+{
+  display: inherit;
+  visibility: hidden;
+}
